--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-number-format": "^5.2.2",
     "react-query": "^3.39.3",
-    "react-spring": "^9.7.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
