--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.10.1",
     "react-number-format": "^5.2.2",
     "react-query": "^3.39.3",
+    "tailwind-variants": "^0.1.13",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
